Created a requirements section in the readme